--- a/portfolio.html
+++ b/portfolio.html
@@ -2,48 +2,141 @@
 <html>
   <head>
     <title>Hosea Maina | Portfolio</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #333;
+        line-height: 1.6;
+      }
+
+      header {
+        background-color: #333;
+        color: white;
+        padding: 20px 0;
+        text-align: center;
+      }
+
+      main {
+        max-width: 900px;
+        margin: auto;
+        padding: 20px;
+        background-color: white;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+
+      h1,
+      h2 {
+        color: #444;
+      }
+
+      u {
+        text-decoration-color: #007bff;
+      }
+
+      ul {
+        list-style-type: square;
+        padding-left: 20px;
+      }
+
+      a {
+        color: #007bff;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+      .section {
+        margin-bottom: 40px;
+      }
+    </style>
   </head>
   <body>
-    <h1 style="text-align: left"><u>About Me</u></h1>
-    <p>
-      Hi, I am Hosea Maina — a passionate software developer currently situated
-      in Nairobi, Kenya. I am deeply enthusiastic about solving real-world
-      problems via code and constantly looking out for new ways to learn and
-      grow in the tech space. I enjoy building applications curated to the
-      users' needs whilst providing a seamless user experience. My drive
-      originates from curiosity and the desire to use code as a means of making
-      life much more easier.
-    </p>
-    <br />
+    <header>
+      <h1>Hosea Maina</h1>
+      <p>Software Developer | Tech Enthusiast | Lifelong Learner</p>
+    </header>
 
-    <h2 style="text-align: left"><u>Programming languages</u></h2>
-    <p>Among some of the programming languages I have mastered include:
-    <ul>
-      <li>HTML - for creating websites.</li>
-      <li>R - used in statistical computing, data analysis and graphical visualization.</li>
-      <li>Javascript - for making websites more interactive and dynamic.</li>
-    </ul>
-    </p>
-    <br/>
+    <main>
+      <section class="section">
+        <h2><u>About Me</u></h2>
+        <p>
+          Hi, I am Hosea Maina — a passionate software developer currently
+          situated in Nairobi, Kenya. I am deeply enthusiastic about solving
+          real-world problems via code and constantly looking out for new ways
+          to learn and grow in the tech space. I enjoy building applications
+          curated to the users' needs whilst providing a seamless user
+          experience. My drive originates from curiosity and the desire to use
+          code as a means of making life much more easier.
+        </p>
+      </section>
 
-<h2 style = "text-align : left"><u>Educational Background</u></h2>
-<p>I am currently in my third year of study in Jomo Kenyatta University of Agriculture and Technology (JKUAT) pursuing a course in Bachelors of Mathematics and Computer Science.So far I am proud to say that I have amased numerous skills in programming,data analysis,algorithms,data structures as well as software development fundamentals.</p>
-<p>Attached below is a copy of my Curriculum Vitae if interested.</p>
-<a href="Hosea-Maina-CV.docx" download>Download My CV (Word)</a>
+      <section class="section">
+        <h2><u>Programming Languages</u></h2>
+        <ul>
+          <li>HTML - for creating websites.</li>
+          <li>
+            R - used in statistical computing, data analysis and graphical
+            visualization.
+          </li>
+          <li>
+            JavaScript - for making websites more interactive and dynamic.
+          </li>
+        </ul>
+      </section>
 
-<h2 style = "text-align : left"><u>Interests</u></h2>
-<p>I'm particularly excited by the world of Artificial Intelligence, user-centered design, and open-source software. I enjoy learning about new tech trends, contributing to developer communities, and building solutions that improve productivity. Professionally, I'm interested in frontend development, full-stack web applications, and automating everyday tasks with code.</p>
-<br/>
+      <section class="section">
+        <h2><u>Educational Background</u></h2>
+        <p>
+          I am currently in my third year of study in Jomo Kenyatta University
+          of Agriculture and Technology (JKUAT) pursuing a course in Bachelors
+          of Mathematics and Computer Science. So far, I am proud to say that I
+          have amassed numerous skills in programming, data analysis,
+          algorithms, data structures, and software development fundamentals.
+        </p>
+        <p>Attached below is a copy of my Curriculum Vitae if interested:</p>
+        <a href="./CURRICULUM VITAE.docx" download>Download My CV (Word)</a>
+      </section>
 
-<h2 style = "text-align: left"><u>Projects</u></h2>
-<p>A good example of a project I've worked on is this portfolio that entails HTML and some CSS.I am also working on some other projects which are to be uploaded to github for public display after I'm done with them.</p> 
-<br/>
+      <section class="section">
+        <h2><u>Interests</u></h2>
+        <p>
+          I'm particularly excited by the world of Artificial Intelligence,
+          user-centered design, and open-source software. I enjoy learning about
+          new tech trends, contributing to developer communities, and building
+          solutions that improve productivity. Professionally, I'm interested in
+          frontend development, full-stack web applications, and automating
+          everyday tasks with code.
+        </p>
+      </section>
 
-<h2 style ="text-align : left"><u>Contact Me</u></h2>
-<p>I am always open to collaborations or discussing potential opportunities that may arise in the future.If interested,attached below are my contact details.Feel free to reach out.</p>
-<p> <ul>
-<li>Phone - +254759170687</li>
-<li>Email - hoseagatimu05@gmail.com</li>
-</ul> </p>
-</body>
+      <section class="section">
+        <h2><u>Projects</u></h2>
+        <p>
+          A good example of a project I've worked on is this portfolio that
+          entails HTML and some CSS. I am also working on some other projects
+          which are to be uploaded to GitHub for public display after I'm done
+          with them.
+        </p>
+      </section>
+
+      <section class="section">
+        <h2><u>Contact Me</u></h2>
+        <p>
+          I am always open to collaborations or discussing potential
+          opportunities that may arise in the future. If interested, feel free
+          to reach out:
+        </p>
+        <ul>
+          <li>Phone - +254759170687</li>
+          <li>Email - hoseagatimu05@gmail.com</li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
+s
