--- a/index.html
+++ b/index.html
@@ -2,58 +2,7 @@
 <html>
   <head>
     <title>Hosea Maina | Portfolio</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-        color: #333;
-        line-height: 1.6;
-      }
-
-      header {
-        background-color: #333;
-        color: white;
-        padding: 20px 0;
-        text-align: center;
-      }
-
-      main {
-        max-width: 900px;
-        margin: auto;
-        padding: 20px;
-        background-color: white;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-
-      h1,
-      h2 {
-        color: #444;
-      }
-
-      u {
-        text-decoration-color: #007bff;
-      }
-
-      ul {
-        list-style-type: square;
-        padding-left: 20px;
-      }
-
-      a {
-        color: #007bff;
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration: underline;
-      }
-
-      .section {
-        margin-bottom: 40px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
